feat: support fallback font